--- a/src/popup.html
+++ b/src/popup.html
@@ -21,7 +21,7 @@
 	<em>&nbsp;</em></p>
 
 <br />
-<button id="buttonSave" type="submit">Save</button> &nbsp;&nbsp;&nbsp; <button id="buttonCancel" type="reset">Cancel</button>
+<button id="buttonSave" type="submit">Confirm</button> &nbsp;&nbsp;&nbsp; <button id="buttonCancel" type="reset">Cancel</button>
 
 </body>
 </html>
